#802 - levels carousel no longer wraps #810 - updated trailers for movie bar and machinima bar to have new text for choices and fixed css to make text not look horribad

--- a/public/css/starbar-machinima.css
+++ b/public/css/starbar-machinima.css
@@ -2461,6 +2461,11 @@ height: 359px;
 	color:#fff;
 }
 
+#sayso-starbar-spotlight-frame .sb_tabs .sb_mv_questions_opts .sb_rating_choice_text
+{
+	width:240px;
+}
+
 #sayso-starbar-spotlight-frame .sb_tabs .sb_mv_questions_opts label
 {
 	margin-top:1px;
